test/functions/deitz/test_return2.good
test_return2.chpl:1: In function 'foo':
test_return2.chpl:4: error: Invalid mix of 'return's
test_return2.chpl:4: note: this one returns something
test_return2.chpl:6: note: this one does not return anything
